force-app/main/default/objects/Trigger_Context_Status__mdt/Trigger_Context_Status__mdt.object-meta.xml
<CustomObject>
    <description>Use this metadata type to turn on/off the specific trigger contexts for a given object. For example, if the afterUpdate() method on the AccountTriggerHandler is causing issues in production, you can disable that specific trigger context using this setting. All other trigger contexts in the AccountTriggerHandler will continue to work.</description>
    <label>Trigger Context Status</label>
    <pluralLabel>Trigger Context Status</pluralLabel>
</CustomObject>