force-app/main/default/objects/Trigger_Context_Status__mdt/fields/Enable_After_Delete__c.field-meta.xml
<CustomField>
    <fullName>Enable_After_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable After Delete</label>
    <type>Checkbox</type>
</CustomField>