force-app/main/default/objects/Trigger_Context_Status__mdt/fields/Enable_Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Enable_Before_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Before Insert</label>
    <type>Checkbox</type>
</CustomField>