force-app/main/default/objects/Trigger_Context_Status__mdt/fields/instantiate_type__c.field-meta.xml
<CustomField>
    <fullName>instantiate_type__c</fullName>
    <label>instantiate type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>