force-app/main/default/objects/Trigger_Context_Status__mdt/fields/related_class__c.field-meta.xml
<CustomField>
    <fullName>related_class__c</fullName>
    <label>related class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>