force-app/main/default/objects/Trigger_Context_Status__mdt/fields/the_handler_to_call__c.field-meta.xml
<CustomField>
    <fullName>the_handler_to_call__c</fullName>
    <label>the handler to call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>