force-app/main/default/objects/Trigger_Context_Status__mdt/fields/the_instance__c.field-meta.xml
<CustomField>
    <fullName>the_instance__c</fullName>
    <label>the instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>